@@ -19,7 +19,9 @@
 			<Options
 				Target = "SharedLibrary"
 				PauseConsoleOutput = "True"
-				CompilerArgs = "" />
+				CompilerArgs = "" 
+				Packages = "glib-2.0"
+				/>
 			
 			<Files>
 				<File name = "main.vala"><![CDATA[// project created on ${Date} at ${Time}
